add notes.